# clean_architechture

./: .gitignore  README.md  api.py  config.py  constant.py  example.env.yaml  pyproject.toml
libs/: datetime_utils.py  result.py
src/: depends.py  logger.py
src/adapter/repositories/: __init__.py  user_repository.py
src/adapter/services/: __init__.py  cache_backend.py  kafka_consumer.py  kafka_producer.py  sql_unit_of_work.py
src/api/: __init__.py  app.py  error.py
src/api/routes/: health_check.py  user.py
src/app/repositories/: user_repository.py
src/app/services/: __init__.py  cache_backend.py  kafka_consumer.py  kafka_producer.py  redis_key_service.py  unit_of_work.py
src/app/use_case/: __init__.py  create_user.py
src/domain/: base.py  user.py
